# anubis-solver-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker.yml
src/: lib.rs  main.rs
