[package]
name = "anubis_solver"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "anubis-proxy"
path = "src/bin/proxy.rs"

[dependencies]
hex = "0.4.3"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["cookies", "json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
sha2 = "0.10.9"
itoa = "1.0"
fake_user_agent = "0.2.3"
dashmap = "6"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
urlencoding = "2.1.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
